# Simple-RPG-Game

./: CMakeLists.txt  README.md  main.cpp
include/: Array.hpp  Character.hpp  Mage.hpp  Necromancer.hpp  Warrior.hpp
src/: Array.cpp  Character.cpp  Mage.cpp  Warrior.cpp
